--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* scrollbar */
+::-webkit-scrollbar{
+  width: 6px;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity ease-in-out 10s;
+}
+::-webkit-scrollbar-track{
+  background: none;
+}
+::-webkit-scrollbar-thumb{
+  background: #ced4dc;
+  border-radius: 20px;
+}
